--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-table",
   "description": null,
   "version": "0.0.421",
+  "homepage": "https://renaudtertrais.github.io/react-super-table",
   "dependencies": {
     "classnames": "2.2.5",
     "immutable": "3.8.1",
@@ -11,13 +12,16 @@
     "react-icons": "^2.2.5"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
