Add storybook + clean code + styles

--- a/package.json
+++ b/package.json
@@ -1,29 +1,54 @@
 {
   "name": "react-table",
-  "description": null,
-  "version": "0.0.421",
-  "homepage": "https://renaudtertrais.github.io/react-super-table",
-  "dependencies": {
-    "classnames": "2.2.5",
-    "immutable": "3.8.1",
-    "lodash": "4.17.4",
-    "react": "15.6.2",
-    "react-dom": "15.6.2",
-    "react-icons": "^2.2.5"
+  "version": "0.0.1",
+  "main": "index.js",
+  "repository": "https://renaudtertrais.github.io/pretty-ui",
+  "author": "Renaud Tertrais <renaud.tertrais@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "lint:style": "stylelint \"src/*.scss\" \"src/**/*.scss\" \"src/*.css\" \"src/**/*.css\"",
+    "lint:script": "eslint .",
+    "lint": "npm run lint:script && npm run lint:style",
+    "clean:storybook": "rimraf build/storybook",
+    "prebuild:storybook": "npm run clean:storybook && npm run lint",
+    "build:storybook": "build-storybook -c .storybook -o build/storybook",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build/storybook",
+    "build": "npm run build:storybook",
+    "start": "npm run storybook"
   },
   "devDependencies": {
+    "@storybook/addon-centered": "3.2.12",
+    "@storybook/addon-info": "3.2.12",
+    "@storybook/addon-knobs": "3.2.12",
+    "@storybook/addon-options": "3.2.12",
+    "@storybook/react": "3.1.6",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "gh-pages": "^1.0.0",
-    "react-scripts": "1.0.0"
+    "github-markdown-css": "^2.9.0",
+    "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "storybook-addon-jsx": "^4.2.0",
+    "storybook-readme": "^3.0.6",
+    "stylelint": "^8.2.0",
+    "stylelint-config-recommended": "^1.0.0",
+    "stylelint-scss": "^2.1.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "immutable": "^3.8.2",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
