--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-table",
+  "name": "@beqom/data-grid",
   "version": "0.0.1",
   "main": "index.js",
   "repository": {
@@ -18,7 +18,9 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build/storybook",
-    "build": "npm run build:storybook",
+    "clean:dist": "rimraf dist",
+    "prebuild": "npm run clean:dist && copy ./package.json ./README.md ./dist",
+    "build": "cross-env NODE_ENV=production babel ./src -d ./dist --ignore story.js,__tests__,data.json --copy-files",
     "start": "npm run storybook"
   },
   "devDependencies": {
@@ -27,6 +29,12 @@
     "@storybook/addon-knobs": "3.2.12",
     "@storybook/addon-options": "3.2.12",
     "@storybook/react": "3.1.6",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "copy": "^0.3.1",
+    "cross-env": "^5.1.1",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-config-prettier": "^2.6.0",
@@ -44,9 +52,7 @@
     "storybook-readme": "^3.0.6",
     "stylelint": "^8.2.0",
     "stylelint-config-recommended": "^1.0.0",
-    "stylelint-scss": "^2.1.0"
-  },
-  "dependencies": {
+    "stylelint-scss": "^2.1.0",
     "classnames": "^2.2.5",
     "immutable": "^3.8.2",
     "lodash": "^4.17.4",
@@ -56,7 +62,21 @@
     "react-dom": "^16.0.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
+    "redux": "^3.7.2"
+  },
+  "peerDependencies": {
+    "classnames": "^2.2.5",
+    "immutable": "^3.8.2",
+    "lodash": "^4.17.4",
+    "pretty-ui": "0.1.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-immutable-proptypes": "^2.1.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
+  },
+  "dependencies": {
     "styled-components": "^2.2.3"
   }
 }
