--- a/package.json
+++ b/package.json
@@ -65,16 +65,16 @@
     "redux": "^3.7.2"
   },
   "peerDependencies": {
-    "classnames": "^2.2.5",
-    "immutable": "^3.8.2",
-    "lodash": "^4.17.4",
-    "pretty-ui": "0.1.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-immutable-proptypes": "^2.1.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "classnames": ">=2.0.0",
+    "immutable": ">=3.8.0",
+    "lodash": ">=4.0.0",
+    "pretty-ui": "^0.1.1",
+    "prop-types": ">=15.0.0",
+    "react": ">=15.0.0",
+    "react-dom": ">=15.0.0",
+    "react-immutable-proptypes": ">=2.1.0",
+    "react-redux": ">=5.0.0",
+    "redux": ">=3.0.0"
   },
   "dependencies": {
     "styled-components": "^2.2.3"
