--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "start": "npm run storybook"
   },
   "devDependencies": {
-    "@storybook/addon-centered": "3.2.12",
-    "@storybook/addon-info": "3.2.12",
-    "@storybook/addon-knobs": "3.2.12",
-    "@storybook/addon-options": "3.2.12",
+    "@beqom/alto-ui": "0.3.2",
+    "@storybook/addon-centered": "3.2.16",
+    "@storybook/addon-info": "3.2.16",
+    "@storybook/addon-knobs": "3.2.16",
+    "@storybook/addon-options": "3.2.16",
     "@storybook/react": "3.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
     "copy": "^0.3.1",
     "cross-env": "^5.1.1",
     "eslint": "^4.8.0",
@@ -46,37 +48,32 @@
     "github-markdown-css": "^2.9.0",
     "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-immutable-proptypes": "^2.1.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "storybook-addon-jsx": "^4.2.0",
     "storybook-readme": "^3.0.6",
     "stylelint": "^8.2.0",
     "stylelint-config-recommended": "^1.0.0",
-    "stylelint-scss": "^2.1.0",
-    "classnames": "^2.2.5",
-    "immutable": "^3.8.2",
-    "lodash": "^4.17.4",
-    "pretty-ui": "0.1.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-immutable-proptypes": "^2.1.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "stylelint-scss": "^2.1.0"
   },
   "peerDependencies": {
-    "classnames": ">=2.0.0",
-    "immutable": ">=3.8.0",
-    "lodash": ">=4.0.0",
-    "pretty-ui": "^0.1.1",
+    "@beqom/alto-ui": "0.3.2",
     "prop-types": ">=15.0.0",
     "react": ">=15.0.0",
     "react-dom": ">=15.0.0",
-    "react-immutable-proptypes": ">=2.1.0",
     "react-redux": ">=5.0.0",
     "redux": ">=3.0.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "immutable": "^3.8.2",
+    "lodash": "4.17.4",
+    "react-immutable-proptypes": "2.1.0",
     "styled-components": "^2.2.3"
   }
 }
